--- a/WAPP_G12/Site.Master
+++ b/WAPP_G12/Site.Master
@@ -15,7 +15,8 @@
     <webopt:bundlereference runat="server" path="~/Content/css" />
 
     <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="Images/WebLogo.png" />
 
 </head>
@@ -43,7 +44,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary">
             <div class="container">
                 <a class="navbar-brand" runat="server" href="~/">
-                    <asp:Image ID="LogoImg" runat="server" CssClass="navbar-logo" ImageUrl="~/Images/WebLogo.png" AlternateText="SciVerse Logo" />SciVerse
+                    <asp:Image ID="LogoImg" runat="server" CssClass="navbar-logo" ImageUrl="~/Images/WebLogo.png" AlternateText="SciVerse Logo" />
                 </a>
 
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
@@ -51,25 +52,49 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
-                    </ul>
+                    <ul class="navbar-nav ms-auto me-5">
+                        <li class="nav-link fw-bold"><a class="nav-link" runat="server" href="~/">Learn</a></li>
+                        <li class="nav-link fw-bold"><a class="nav-link" runat="server" href="~/">Quiz</a></li>
+                        <li class="nav-link fw-bold"><a class="nav-link" runat="server" href="~/About">About</a></li>
+                        <li class="nav-link fw-bold"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li> 
+                       <li class="nav-item dropdown fw-bold">
+                            <% if (Session["Username"] == null) { %>
+                                <!-- Show Login if not logged in -->
+                                <a class="nav-link" runat="server" href="~/Account/Login.aspx">Login</a>
+                            <% } else { %>
+                                <!-- Show Dropdown if logged in -->
+                                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                                   data-bs-toggle="dropdown" aria-expanded="false">
+                                    <%= Session["Username"] %>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                                    <li><a class="dropdown-item" runat="server" href="~/Account/Profile.aspx">Profile</a></li>
+                                    <li>
+                                        <asp:LinkButton ID="btnLogout" runat="server" CssClass="dropdown-item"
+                                                        OnClick="btnLogout_Click">Logout</asp:LinkButton>
+                                    </li>
+                                </ul>
+                            <% } %>
+                        </li>
+                     </ul>
+
                 </div>
+
             </div>
         </nav>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
-            <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+            <footer style="text-align:center;">
+                <p>&copy; <%: DateTime.Now.Year %> - SciVerse. All Rights Reserved.</p>
             </footer>
         </div>
     </form>
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
     </asp:PlaceHolder>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
