--- a/WAPP_G12/Site.Master
+++ b/WAPP_G12/Site.Master
@@ -56,8 +56,7 @@
                     <ul class="navbar-nav ms-auto me-5">
                         <li class="nav-link fw-bold"><a class="nav-link" runat="server" href="~/">Learn</a></li>
                         <li class="nav-link fw-bold"><a class="nav-link" runat="server" href="~/">Quiz</a></li>
-                        <li class="nav-link fw-bold"><a class="nav-link" runat="server" href="~/About">About</a></li>
-                        <li class="nav-link fw-bold"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li> 
+                        <li class="nav-link fw-bold"><a class="nav-link" runat="server" href="~/About">Simulations</a></li>
                        <li class="nav-item dropdown fw-bold">
                             <% if (Session["Username"] == null) { %>
                                 <!-- Show Login if not logged in -->
@@ -84,11 +83,25 @@
             </div>
         </nav>
         <div class="container body-content">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server">
-            </asp:ContentPlaceHolder>
-            <hr />
-            <footer style="text-align:center;">
-                <p>&copy; <%: DateTime.Now.Year %> - SciVerse. All Rights Reserved.</p>
+        <asp:ContentPlaceHolder ID="MainContent" runat="server">
+        </asp:ContentPlaceHolder>
+        <hr />
+    </div>
+        <div class="footer-wrapper">
+            <footer class="footer">
+                <div class="text-center">
+                    <!-- Footer Links -->
+                    <div class="mb-3">
+                        <a href="~/About" class="text-dark text-decoration-none footer-link">About Us</a>
+                        <a href="~/Contact" class="text-dark text-decoration-none footer-link">Contact</a>
+                        <a href="#" class="text-dark text-decoration-none footer-link">Privacy Policy</a>
+                    </div>
+
+                    <!-- Copyright -->
+                    <div>
+                        <p class="mb-0">&copy; <%: DateTime.Now.Year %> - SciVerse. All Rights Reserved.</p>
+                    </div>
+                </div>
             </footer>
         </div>
     </form>
