--- a/WAPP_G12/Site.Master
+++ b/WAPP_G12/Site.Master
@@ -55,6 +55,7 @@
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
+                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Flashcard/viewFlashcard">Flashcard</a></li>
                     </ul>
                 </div>
             </div>
